--- a/Day05/02_페이지/01_메인페이지/css/style.css
+++ b/Day05/02_페이지/01_메인페이지/css/style.css
@@ -288,7 +288,7 @@ html{
 .container {
     width: var(--container-size);
     margin: 0 auto;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     position: relative;
 }
 
@@ -297,7 +297,7 @@ section {
     width: 100%;
     min-height: 600px;
     padding: 100px 0;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
 /* ====================== 섹션01 ======================*/
@@ -378,3 +378,97 @@ section {
 
 
 /* ====================== 섹션02 ======================*/
+
+/* ====================== 섹션03,04 ======================*/
+
+.layout-detail {}
+.layout-detail .inner{
+    /* padding: 0 50px; */
+    display: flex;
+    justify-content: center;
+    column-gap: 100px;
+    ;
+}
+.layout-detail .inner .detail-left{}
+.layout-detail .inner .detail-left img{
+    width: 500px;
+    height: 500px;
+    object-fit: cover;
+}
+
+.layout-detail .inner .detail-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.layout-detail .inner .detail-right .content-box {}
+.layout-detail .inner .detail-right .content-box h3{
+    font-size: 32px;
+}
+.layout-detail .inner .detail-right .content-box p{
+    font-size: 18px;
+}
+.layout-detail .inner .detail-right .btn-box {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn {
+    display: inline-block;
+    min-width: 120px;
+    padding: 12px 24px;
+    background-color: var(--sub-color);
+    color: white;
+    border-radius: 10px;
+}
+
+/* layout-detail reverse */
+.layout-detail.reverse .detail-left { order: 2;}
+.layout-detail.reverse .detail-right { order: 1;}
+/* ====================== 섹션03,04 ======================*/
+
+
+
+/* ====================== 푸터 ======================*/
+footer {
+    width: 100%;
+    min-height: 480px;
+    background-color: #212121;
+    margin-top: 50px;
+    position: relative;
+    color: white;
+}
+footer .footer-menu {
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+}
+footer .footer-menu .site-map {
+    display: flex;
+    column-gap: 100px;
+}
+footer .footer-menu .site-map .item {}
+footer .footer-menu .site-map .item ul {}
+footer .footer-menu .site-map .item ul li {
+    margin: 20px;
+}
+
+footer .footer-menu .family-site {}
+footer .footer-menu .family-site select {
+    position: relative;
+    padding: 10px 30px;
+    top: 15px;
+    left: 60px;
+    margin-left: 400px;
+}
+
+footer .copy { text-align: center; padding: 50px;}
+footer .copy p {}
+
+
+/* ====================== 푸터 ======================*/
+
+
+
+
+
